fix: missing color var in stylesheet

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@ $info: #707179;
 $gray: #b8b8be;
 $aqua: #008281;
 $slate: #4c5f73;
+$yellow: #ffe100;
 $danger: #dc3545;
 $light: #f8f9fa;
 $success: #28a745;
@@ -25,6 +26,7 @@ $theme-colors: (
   "gray": $gray,
   "aqua": $aqua,
   "slate": $slate,
+  "yellow": $yellow,
   "danger": $danger,
   "light": $light,
   "success": $success,
